--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ table, th, td{
 }
 
 th {
-  background-color:wheat;
+  background-color:antiquewhite;
   position: sticky;
   top: 0;
   box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
